force-app/main/default/objects/Account/fields/Aadhar_No__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_No__c</fullName>
    <label>Aadhar No.</label>
    <length>20</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>