force-app/main/default/objects/Account/fields/AadharNo__c.field-meta.xml
<CustomField>
    <fullName>AadharNo__c</fullName>
    <description>Used for Wellness</description>
    <label>ID Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>