force-app/main/default/objects/Account/fields/ABC_Consent__c.field-meta.xml
<CustomField>
    <fullName>ABC_Consent__c</fullName>
    <label>ABC Consent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>