force-app/main/default/objects/Account/fields/ABHI_Country__c.field-meta.xml
<CustomField>
    <fullName>ABHI_Country__c</fullName>
    <description>This field is created to use for ABHI Account page</description>
    <formula>IF(BillingCountry != null, BillingCountry, ShippingCountry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>