force-app/main/default/objects/Account/fields/ABML_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>ABML_Activation_Date__c</fullName>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>