force-app/main/default/objects/Account/fields/ABML_Auth_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>ABML_Auth_Person_Name__c</fullName>
    <label>Auth Person Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>