force-app/main/default/objects/Account/fields/ABML_Bank_Account_no__c.field-meta.xml
<CustomField>
    <fullName>ABML_Bank_Account_no__c</fullName>
    <label>Bank Account no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>