force-app/main/default/objects/Account/fields/ABML_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>ABML_Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>