force-app/main/default/objects/Account/fields/ABML_BM_Mobile__c.field-meta.xml
<CustomField>
    <fullName>ABML_BM_Mobile__c</fullName>
    <label>BM Mobile</label>
    <type>Phone</type>
</CustomField>