force-app/main/default/objects/Account/fields/ABML_BM_Name__c.field-meta.xml
<CustomField>
    <fullName>ABML_BM_Name__c</fullName>
    <label>BM Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>