force-app/main/default/objects/Account/fields/ABML_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>ABML_Branch_Code__c</fullName>
    <externalId>true</externalId>
    <label>Branch Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>