force-app/main/default/objects/Account/fields/ABML_Branch_Zone__c.field-meta.xml
<CustomField>
    <fullName>ABML_Branch_Zone__c</fullName>
    <label>Branch Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>