force-app/main/default/objects/Account/fields/ABML_Cluster_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>ABML_Cluster_Manager_Email__c</fullName>
    <label>Cluster Manager Email</label>
    <type>Email</type>
</CustomField>