force-app/main/default/objects/Account/fields/ABML_Cluster_Manager_Mobile__c.field-meta.xml
<CustomField>
    <fullName>ABML_Cluster_Manager_Mobile__c</fullName>
    <label>Cluster Manager Mobile</label>
    <type>Phone</type>
</CustomField>