force-app/main/default/objects/Account/fields/ABML_Cluster_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>ABML_Cluster_Manager_Name__c</fullName>
    <label>Cluster Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>