force-app/main/default/objects/Account/fields/ABML_Contact_Category__c.field-meta.xml
<CustomField>
    <fullName>ABML_Contact_Category__c</fullName>
    <label>Contact Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>