force-app/main/default/objects/Account/fields/ABML_Contact_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>ABML_Contact_Subcategory__c</fullName>
    <label>Contact Subcategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>