force-app/main/default/objects/Account/fields/ABML_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>ABML_Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Franchisee</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>DSA</fullName>
            </value>
            <value>
                <fullName>Branch Employee</fullName>
            </value>
            <value>
                <fullName>BSB</fullName>
            </value>
            <value>
                <fullName>DP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>