force-app/main/default/objects/Account/fields/ABML_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>ABML_Cost_Center__c</fullName>
    <label>Cost Center</label>
    <length>100</length>
    <type>Text</type>
</CustomField>