force-app/main/default/objects/Account/fields/ABML_Date_of_Closure__c.field-meta.xml
<CustomField>
    <fullName>ABML_Date_of_Closure__c</fullName>
    <label>Date of Closure</label>
    <type>DateTime</type>
</CustomField>