force-app/main/default/objects/Account/fields/ABML_Franchisee_Category__c.field-meta.xml
<CustomField>
    <fullName>ABML_Franchisee_Category__c</fullName>
    <label>Franchisee Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>