force-app/main/default/objects/Account/fields/ABML_Franchisee_Code__c.field-meta.xml
<CustomField>
    <fullName>ABML_Franchisee_Code__c</fullName>
    <externalId>true</externalId>
    <label>Franchisee Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>