force-app/main/default/objects/Account/fields/ABML_IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>ABML_IFSC_Code__c</fullName>
    <label>IFSC Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>