force-app/main/default/objects/Account/fields/ABML_Mobile__c.field-meta.xml
<CustomField>
    <fullName>ABML_Mobile__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>