force-app/main/default/objects/Account/fields/ABML_Partner_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>ABML_Partner_Segmentation__c</fullName>
    <label>Partner Segmentation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>