force-app/main/default/objects/Account/fields/ABML_Regional_Head_Email__c.field-meta.xml
<CustomField>
    <fullName>ABML_Regional_Head_Email__c</fullName>
    <label>Regional Head Email</label>
    <type>Email</type>
</CustomField>