force-app/main/default/objects/Account/fields/ABML_Regional_Head_Mobile__c.field-meta.xml
<CustomField>
    <fullName>ABML_Regional_Head_Mobile__c</fullName>
    <label>Regional Head Mobile</label>
    <type>Phone</type>
</CustomField>