force-app/main/default/objects/Account/fields/ABML_Regional_Head_Name__c.field-meta.xml
<CustomField>
    <fullName>ABML_Regional_Head_Name__c</fullName>
    <label>Regional Head Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>