force-app/main/default/objects/Account/fields/ABML_Registered_Segments__c.field-meta.xml
<CustomField>
    <fullName>ABML_Registered_Segments__c</fullName>
    <label>Registered Segments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>