force-app/main/default/objects/Account/fields/ABML_Scheme__c.field-meta.xml
<CustomField>
    <fullName>ABML_Scheme__c</fullName>
    <label>Scheme</label>
    <length>100</length>
    <type>Text</type>
</CustomField>