force-app/main/default/objects/Account/fields/ABML_SEBI_No__c.field-meta.xml
<CustomField>
    <fullName>ABML_SEBI_No__c</fullName>
    <label>SEBI No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>