force-app/main/default/objects/Account/fields/ABML_Terminal_Code__c.field-meta.xml
<CustomField>
    <fullName>ABML_Terminal_Code__c</fullName>
    <label>Terminal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>