force-app/main/default/objects/Account/fields/ABML_Zone_Head_Email__c.field-meta.xml
<CustomField>
    <fullName>ABML_Zone_Head_Email__c</fullName>
    <label>Zone Head Email</label>
    <type>Email</type>
</CustomField>