force-app/main/default/objects/Account/fields/ABML_Zone_Head_Mobile__c.field-meta.xml
<CustomField>
    <fullName>ABML_Zone_Head_Mobile__c</fullName>
    <label>Zone Head Mobile</label>
    <type>Phone</type>
</CustomField>