force-app/main/default/objects/Account/fields/ABML_Zone_Name__c.field-meta.xml
<CustomField>
    <fullName>ABML_Zone_Name__c</fullName>
    <label>Zone Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>