force-app/main/default/objects/Account/fields/ABWM_RM_Code__c.field-meta.xml
<CustomField>
    <fullName>ABWM_RM_Code__c</fullName>
    <label>RM Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>