force-app/main/default/objects/Account/fields/ABWM_RM_Email__c.field-meta.xml
<CustomField>
    <fullName>ABWM_RM_Email__c</fullName>
    <label>RM Email</label>
    <type>Email</type>
</CustomField>