force-app/main/default/objects/Account/fields/ABWM_RM_Name__c.field-meta.xml
<CustomField>
    <fullName>ABWM_RM_Name__c</fullName>
    <label>RM Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>