force-app/main/default/objects/Account/fields/AddressProof__c.field-meta.xml
<CustomField>
    <fullName>AddressProof__c</fullName>
    <description>Used for Wellness</description>
    <label>AddressProof</label>
    <length>100</length>
    <type>Text</type>
</CustomField>