force-app/main/default/objects/Account/fields/Advisor_Branch__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Branch__c</fullName>
    <description>ABSLI Field to Store Advisor&apos;s Branch</description>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>