force-app/main/default/objects/Account/fields/Advisor_Code__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Code__c</fullName>
    <description>ABSLI Advisor Code - External ID</description>
    <externalId>true</externalId>
    <label>Advisor Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>