force-app/main/default/objects/Account/fields/Advisor_Manager__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Manager__c</fullName>
    <description>ABSLI Field to store Advisor Manager&apos;s name</description>
    <label>Manager&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>