force-app/main/default/objects/Account/fields/Advisor_Status__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Status__c</fullName>
    <description>ABSLI Field to Store Advisor&apos;s Status</description>
    <label>Agent/Adivisor Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>