force-app/main/default/objects/Account/fields/Agent_Category__c.field-meta.xml
<CustomField>
    <fullName>Agent_Category__c</fullName>
    <description>ABSLI Field to store Agent Category</description>
    <label>Agent Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>