force-app/main/default/objects/Account/fields/Agent_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Agent_Sub_Category__c</fullName>
    <description>ABSLI Field to store Agent Sub Category</description>
    <label>Agent Sub Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>