force-app/main/default/objects/Account/fields/Allow_Retention__c.field-meta.xml
<CustomField>
    <fullName>Allow_Retention__c</fullName>
    <description>ABSLI Field for Advisor - Allow Retention</description>
    <label>Allow Retention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>