force-app/main/default/objects/Account/fields/Alternatemobile__c.field-meta.xml
<CustomField>
    <fullName>Alternatemobile__c</fullName>
    <label>Alternatemobile</label>
    <length>100</length>
    <type>Text</type>
</CustomField>