force-app/main/default/objects/Account/fields/AMFI_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>AMFI_Registration_Number__c</fullName>
    <label>AMFI Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>