force-app/main/default/objects/Account/fields/ApplicationNo__c.field-meta.xml
<CustomField>
    <fullName>ApplicationNo__c</fullName>
    <label>Application No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>