force-app/main/default/objects/Account/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>ABSLI Field</description>
    <label>Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>