force-app/main/default/objects/Account/fields/ARN_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>ARN_Expiry_Date__c</fullName>
    <label>ARN Expiry Date</label>
    <type>Date</type>
</CustomField>