force-app/main/default/objects/Account/fields/ARN_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>ARN_Issue_Date__c</fullName>
    <label>ARN Issue Date</label>
    <type>Date</type>
</CustomField>