force-app/main/default/objects/Account/fields/ARN_Number__c.field-meta.xml
<CustomField>
    <fullName>ARN_Number__c</fullName>
    <label>ARN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>