force-app/main/default/objects/Account/fields/AUM_at_ARN_level__c.field-meta.xml
<CustomField>
    <fullName>AUM_at_ARN_level__c</fullName>
    <label>AUM at ARN level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>