force-app/main/default/objects/Account/fields/Bank_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_No__c</fullName>
    <description>ABSLI Field to Store Advisor&apos;s Bank Account Number</description>
    <label>Bank Account No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>