force-app/main/default/objects/Account/fields/Bank_Branch__c.field-meta.xml
<CustomField>
    <fullName>Bank_Branch__c</fullName>
    <description>ABSLI Field to Store Advisor&apos;s Bank Branch</description>
    <label>Bank Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>