force-app/main/default/objects/Account/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>ABSLI Field to Store Advisor&apos;s Bank Name</description>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>