force-app/main/default/objects/Account/fields/Blacklisted_Tag__c.field-meta.xml
<CustomField>
    <fullName>Blacklisted_Tag__c</fullName>
    <description>ABSLI Customer Field</description>
    <label>Blacklisted Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>