force-app/main/default/objects/Account/fields/Broker_Channel__c.field-meta.xml
<CustomField>
    <fullName>Broker_Channel__c</fullName>
    <label>Broker Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>