force-app/main/default/objects/Account/fields/Broker_Classification__c.field-meta.xml
<CustomField>
    <fullName>Broker_Classification__c</fullName>
    <label>Broker Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>