force-app/main/default/objects/Account/fields/Brokerage_Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Payment_Mode__c</fullName>
    <label>Brokerage Payment Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>