force-app/main/default/objects/Account/fields/CEO_Club_Advisor__c.field-meta.xml
<CustomField>
    <fullName>CEO_Club_Advisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CEO Club Advisor</label>
    <type>Checkbox</type>
</CustomField>