force-app/main/default/objects/Account/fields/Chronic_care__c.field-meta.xml
<CustomField>
    <fullName>Chronic_care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chronic Care</label>
    <type>Checkbox</type>
</CustomField>