force-app/main/default/objects/Account/fields/Chronic_Disease__c.field-meta.xml
<CustomField>
    <fullName>Chronic_Disease__c</fullName>
    <label>Chronic Disease</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>