force-app/main/default/objects/Account/fields/CKYC_No__c.field-meta.xml
<CustomField>
    <fullName>CKYC_No__c</fullName>
    <description>ABSLI Field</description>
    <label>CKYC NO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>