force-app/main/default/objects/Account/fields/Client_Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Transaction_Status__c</fullName>
    <label>Client Transaction Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>