force-app/main/default/objects/Account/fields/CMP_OPD__c.field-meta.xml
<CustomField>
    <fullName>CMP_OPD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CMP</label>
    <type>Checkbox</type>
</CustomField>