force-app/main/default/objects/Account/fields/Constitution__c.field-meta.xml
<CustomField>
    <fullName>Constitution__c</fullName>
    <label>Constitution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>....</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>