force-app/main/default/objects/Account/fields/ContactPersonofEmployer__c.field-meta.xml
<CustomField>
    <fullName>ContactPersonofEmployer__c</fullName>
    <label>Contact Person of Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>