force-app/main/default/objects/Account/fields/Count_of_Active_SIPs__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Active_SIPs__c</fullName>
    <label>Count of Active SIPs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>