force-app/main/default/objects/Account/fields/Count_of_Customers__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Customers__c</fullName>
    <label>Count of Customers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>