force-app/main/default/objects/Account/fields/Created_On__c.field-meta.xml
<CustomField>
    <fullName>Created_On__c</fullName>
    <description>ABSLI Field - Customer Created On</description>
    <label>Created On</label>
    <type>Date</type>
</CustomField>