force-app/main/default/objects/Account/fields/CumulativeBonusEarned__c.field-meta.xml
<CustomField>
    <fullName>CumulativeBonusEarned__c</fullName>
    <label>Cumulative Bonus Earned</label>
    <length>100</length>
    <type>Text</type>
</CustomField>