force-app/main/default/objects/Account/fields/Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category__c</fullName>
    <label>Customer Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BC</fullName>
            </value>
            <value>
                <fullName>GENERAL</fullName>
            </value>
            <value>
                <fullName>INDIVIDUAL</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>OBC</fullName>
            </value>
            <value>
                <fullName>ORGANIZATION</fullName>
            </value>
            <value>
                <fullName>OTH</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>