force-app/main/default/objects/Account/fields/Customer_Networth__c.field-meta.xml
<CustomField>
    <fullName>Customer_Networth__c</fullName>
    <description>This field is used to store customer&apos;s networth</description>
    <label>Customer Networth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>