force-app/main/default/objects/Account/fields/Customer_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Customer_Risk_Rating__c</fullName>
    <description>This field is used to store customer&apos;s risk rating</description>
    <label>Customer Risk Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>