force-app/main/default/objects/Account/fields/Customer_Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Role_Type__c</fullName>
    <label>Customer Role Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>