force-app/main/default/objects/Account/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <description>ABSLI Field  - Used to store Customer Segment</description>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Business Partners</fullName>
            </value>
            <value>
                <fullName>FATCA</fullName>
            </value>
            <value>
                <fullName>FlS</fullName>
            </value>
            <value>
                <fullName>GENERAL</fullName>
            </value>
            <value>
                <fullName>HNI</fullName>
            </value>
            <value>
                <fullName>Non HNI</fullName>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
            <value>
                <fullName>Orphan</fullName>
            </value>
            <value>
                <fullName>PEP</fullName>
            </value>
            <value>
                <fullName>PLATINUMHNI</fullName>
            </value>
            <value>
                <fullName>SUPERHNI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>