force-app/main/default/objects/Account/fields/Customer_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Customer_Subtype__c</fullName>
    <description>ABSLI Field - Used to store customer sub type</description>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Interested Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>