force-app/main/default/objects/Account/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <description>Used in Multiply CRM</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100000000</fullName>
                <label>Retail Floating</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Group Customer</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Agent</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Health Provider</label>
            </value>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Member Customer</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Dependent Customer</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>