force-app/main/default/objects/Account/fields/Date_of_Joining__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Joining__c</fullName>
    <description>ABSLI Field</description>
    <label>Date of Joining</label>
    <type>Date</type>
</CustomField>