force-app/main/default/objects/Account/fields/Distributor_Category__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Category__c</fullName>
    <label>Distributor Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>