force-app/main/default/objects/Account/fields/Distributor_Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Last_Payment_Date__c</fullName>
    <label>Distributor Last Payment Date</label>
    <type>Date</type>
</CustomField>