force-app/main/default/objects/Account/fields/Distributor_Type__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Type__c</fullName>
    <label>Distributor Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>