force-app/main/default/objects/Account/fields/e_Insurance_Account__c.field-meta.xml
<CustomField>
    <fullName>e_Insurance_Account__c</fullName>
    <description>ABSLI Field</description>
    <label>e-Insurance Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>