force-app/main/default/objects/Account/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>ABHIL Field</description>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>