force-app/main/default/objects/Account/fields/Empanelment_Date__c.field-meta.xml
<CustomField>
    <fullName>Empanelment_Date__c</fullName>
    <label>Empanelment Date</label>
    <type>Date</type>
</CustomField>