force-app/main/default/objects/Account/fields/Empanelment_Status__c.field-meta.xml
<CustomField>
    <fullName>Empanelment_Status__c</fullName>
    <label>Empanelment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>